tests/requests/valid/100.py
#
# This file is part of gunicorn released under the MIT license.
# See the NOTICE for more information.

request = {
    "method": "GET",
    "uri": uri("///keeping_slashes"),
    "version": (1, 1),
    "headers": [],
    "body": b""
}
